[project]
name = "btc-options-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "websocket-client (>=1.9.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
